--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="alternate" type="application/json+oembed"
+  href="http://flickr.com/services/oembed?url=http%3A%2F%2Fflickr.com%2Fphotos%2Fbees%2F2362225867%2F&format=json"
+  title="Bacon Lollys oEmbed Profile" />
+  </head>
+  <body>
+    
+  </body>
+  <script>
+    
+  </script>
+</html>
