--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta property="og:title" content="The Rock" />
-    <meta property="og:type" content="video.movie" />
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:title" content="Open Graph protocol">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ogp.me/">
+    <meta property="og:image" content="https://ogp.me/logo.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+    <meta property="og:image:alt" content="The Open Graph logo">
+    <meta property="og:description" content="The Open Graph protocol enables any web page to become a rich object in a social graph.">
   </head>
   <body>
     
