--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     
   </body>
   <script>
-    
+    document.querySelector("[property='og:title']").setAttribute('content', "hi");
   </script>
 </html>
